# anyserve

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEMO.md  Justfile  README.md  agents.md  build.rs  pyproject.toml  pytest.ini
anyserve_scheduler/: __init__.py
anyserve_worker/: __init__.py  __main__.py  loader.py
anyserve_worker/proto/: grpc_predict_v2_pb2.py  grpc_predict_v2_pb2_grpc.py
api_server/: README.md  main.py  registry.py
cpp/: CMakeLists.txt  conanfile.txt
cpp/core/: shm_manager.cpp  shm_manager.hpp
cpp/extension/: python_bindings.cpp
cpp/server/: anyserve_core.cpp  anyserve_core.hpp  anyserve_dispatcher.cpp  anyserve_dispatcher.hpp  anyserve_ingress.cpp  anyserve_ingress.hpp  main.cpp  main_v2.cpp  model_registry.cpp  model_registry.hpp  process_supervisor.cpp  process_supervisor.hpp  worker_client.cpp  worker_client.hpp
cpp/src/: anyserve_core.cpp  anyserve_core.hpp  python_bindings.cpp
demo/: Cargo.toml  app.py  build.rs  miniserve.py  run.sh  worker.py
demo/proto/: grpc_predict_v2.proto
demo/src/: main.rs
demo/worker/: client.py  worker.py
docs/: architecture.md  llamacpp.md  mvp.md  runtime.md  test-plan.md
examples/: basic.py  cli_app.py  client.py  kserve_client.py  kserve_server.py  node_step1.py  node_step2.py  run_client.py  run_demo.sh  server.py  shared.py  test_client.py  test_kserve.py  test_local.py  user_app.py
examples/basic/: README.md  app.py  run_client.sh  run_example.py  run_server.sh  start_client.sh  start_server.sh  test_client.py
examples/basic_dev/: README.md  run_client.sh  run_server.sh  start_client.sh  start_server.sh
examples/llamacpp/: README.md  client.py  run_client.sh  run_server.sh
examples/multi_server/: README.md  __init__.py  run.sh  run_client.sh  run_server.sh  test_client.py  worker1.py  worker2.py
examples/multi_stage/: README.md
examples/multiserver/: test_client.py  worker1.py  worker2.py
examples/mvp/: client.py  replica_h1.py  replica_s1.py  run_demo.sh
examples/mvp_demo/: README.md  __init__.py  chat_app.py  embed_app.py  heavy_app.py  run_demo.sh  stream_app.py  test_client.py  test_stream_client.py
examples/pipeline/: README.md  __init__.py  run.sh  run_client.sh  run_server.sh  test_client.py  worker_a.py  worker_b.py  worker_c.py
examples/step1/: client.py  run_demo.sh
examples/streaming/: README.md  app.py  run_client.sh  run_server.sh  test_client.py
openai_server/: README.md  __init__.py  __main__.py  kserve_client.py
proto/: anyserve.proto  grpc_predict_v2.proto  worker_management.proto
python/anyserve/: __init__.py  api.py  cli.py  core.py  http_server.py  kserve.py  kserve_dispatcher.py  main.py  objects.py
python/anyserve/_proto/: grpc_predict_v2_pb2.py  grpc_predict_v2_pb2_grpc.py  worker_management_pb2_grpc.py
python/anyserve/api_server/: __init__.py  __main__.py  registry.py  router.py
python/anyserve/builtins/: __init__.py
python/anyserve/builtins/llamacpp/: __init__.py  app.py  config.py  engine.py  handlers.py  openai_server.py
python/anyserve/builtins/llamacpp/openai_compat/: __init__.py  kserve_client.py  server.py
python/anyserve/cli/: __init__.py  main.py  run.py  serve.py
python/anyserve/objects/: __init__.py  store.py
python/anyserve/worker/: __init__.py  __main__.py  client.py
python/anyserve/worker/proto/: grpc_predict_v2_pb2.pyi  grpc_predict_v2_pb2_grpc.py  worker_management_pb2.py  worker_management_pb2.pyi  worker_management_pb2_grpc.py
scripts/: bootstrap.sh  gen_proto.sh  run_test.sh
src/: lib.rs  main.rs
tests/: conftest.py  test_llamacpp_mock.py
tests/integration/: test_api_server_integration.py  test_streaming.py
tests/python/: test_cpp_core.py
tests/unit/api_server/: __init__.py  test_registry.py  test_router.py
tests/unit/kserve/: __init__.py  test_anyserve_app.py  test_capability.py  test_context.py  test_stream.py
tests/unit/objects/: __init__.py  test_obj_ref.py  test_object_store.py
