[package]
name = "anyserve"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[lib]
name = "_core"
crate-type = ["cdylib"]

[profile.release]
strip = true
