[package]
name = "anyserve"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "sync", "net", "fs"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
libc = "0.2"
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1", "http2"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[[bin]]
name = "anyserve-node"
path = "src/main.rs"

[profile.release]
strip = true
