[project]
name = "anyserve"
version = "0.1.0"
description = "anyServe - Capability-Oriented Serving Runtime"
authors = [
    { name = "simpx", email = "simpxx@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "requests>=2.31.0",
]

[build-system]
requires = [
    "scikit-build-core>=0.5",
    "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "cpp"
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON_EXTENSION=ON"]
wheel.install-dir = "python/anyserve"
wheel.packages = ["python/anyserve", "anyserve_scheduler", "anyserve_worker"]

[tool.setuptools.packages.find]
where = ["."]
include = ["anyserve_scheduler*", "anyserve_worker*", "python*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "scikit-build-core>=0.5",
    "pybind11>=2.11",
]
