[package]
name = "anyserve-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
shared_memory = "0.12"
tower = { version = "0.4", features = ["util"] }
uuid = { version = "1.10", features = ["v4"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[[bin]]
name = "anyserve-demo"
path = "src/main.rs"
